@@ -76,7 +76,10 @@ My_lily_parser::parse_file (String init, String s)
 
   
   if (!define_spot_array_.empty())
-    warning ("Braces don't match.");
+    {
+      warning ("Braces don't match.");
+      error_level_i_ = 1;
+    }
 }
 
 My_lily_parser::~My_lily_parser()
